fix du chat general + tips